// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initializing a form field should keep initial form field values 1`] = `
Object {
  "foo": Object {
    "data": Object {
      "bar": Object {
        "_initial": Object {
          "isEnabled": false,
          "isRequired": true,
          "isTouched": false,
          "isValid": false,
          "value": "baz",
        },
        "isEnabled": false,
        "isRequired": true,
        "isTouched": false,
        "isValid": false,
        "value": "baz",
      },
    },
    "state": Object {},
  },
}
`;

exports[`Initializing a form field should overwrite default values 1`] = `
Object {
  "foo": Object {
    "data": Object {
      "bar": Object {
        "_initial": Object {
          "isEnabled": true,
          "isRequired": true,
          "isTouched": false,
          "isValid": false,
          "value": true,
        },
        "isEnabled": true,
        "isRequired": true,
        "isTouched": false,
        "isValid": false,
        "value": true,
      },
    },
    "state": Object {},
  },
}
`;

exports[`Initializing a form field should use default values 1`] = `
Object {
  "foo": Object {
    "data": Object {
      "bar": Object {
        "_initial": Object {
          "isEnabled": true,
          "isRequired": false,
          "isTouched": false,
          "isValid": true,
          "value": "",
        },
        "isEnabled": true,
        "isRequired": false,
        "isTouched": false,
        "isValid": true,
        "value": "",
      },
    },
    "state": Object {},
  },
}
`;
